samples/_failures_safe/1761361467_b6d1e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ae22d92.c: In function ‘main’:
./samples/SAFE/__tmp_1ae22d92.c:170:12: error: missing terminating " character
  170 |     printf("Decompressed text
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1ae22d92.c:170:5: error: expected expression at end of input
  170 |     printf("Decompressed text
      |     ^~~~~~
./samples/SAFE/__tmp_1ae22d92.c:170:5: error: expected declaration or statement at end of input
